# opengl-portfolio

./: CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
include/: buffer.h  common.h  context.h  image.h  shader.h  shader_program.h  texture.h  vertex_layout.h
shader/: lighting.fs  lighting.vs  simple.fs  simple.vs  texture.fs  texture.vs
src/: buffer.cc  common.cc  context.cc  image.cc  main.cc  shader.cc  shader_program.cc  texture.cc  vertex_layout.cc
